Tournaments API implementation

--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -27,6 +27,7 @@ return array(
 	),
 	'ggac_riotapi' => array(
 		'key' => '', 
+		'tournament_key' => '', 
 		'region' => 'euw',
 		'max_requests' => 20,
 	),
